Changed out the original LUIS Application with one that I made, refined handling the response and getting the data.

--- a/Bot Application1/Bot Application1/Bot Application1.csproj
+++ b/Bot Application1/Bot Application1/Bot Application1.csproj
@@ -101,11 +101,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\LUISParse.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="PIServices.cs" />
+    <Compile Include="PIWebAPIClient.cs" />
     <Compile Include="pluis.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
